Fix text and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -512,7 +512,7 @@ ol.type li a:hover {
 #contact {
 	padding: 100px 0 40px 0;
 	color: #121d1f;
-	background: #7bc3d1;
+	background: #f6f6f6;
 }
 #contact h2 {
 	color: #fff;
@@ -579,7 +579,7 @@ color: #2c3e50;
 color: #2c3e50;
 }
 #contact .social {
-	margin-top: 60px;
+	margin-top: 0;
 }
 #contact .social ul li {
 	display: inline-block;
